[project]
name = "smolagents-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "gradio>=5.15.0",
    "gradio-client>=1.7.0",
    "mammoth>=1.9.0",
    "markdownify>=0.14.1",
    "pathvalidate>=3.2.3",
    "pdfminer-six>=20240706",
    "puremagic>=1.28",
    "pydub>=0.25.1",
    "python-pptx>=1.0.2",
    "requests>=2.32.3",
    "smolagents[openai]>=1.8.0",
    "speechrecognition>=3.14.1",
    "youtube-transcript-api>=0.6.3",
]
