[package]
name = "httppie"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version= "4.5.27", features = ["derive"] }
colored = "3.0.0"
jsonxf = "1.1.1"
mime = "0.3.17"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
