[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
base64 = "0.22.1"
bytes = "1.9.0"
image = "0.25.5"
lazy_static = "1.5.0"
lru = "0.12.5"
percent-encoding = "2.3.1"
photon-rs = "0.3.1"
prost = "0.13.4"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
prost-build = "0.13.4"
